--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--
 <!doctype html>
 <html lang="en">
   <head>
@@ -13,4 +14,307 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
+</html>
+-->
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="description" content="Scholarz Nation — AI-powered, community-driven study platform for Southern Africa. Curriculum-aligned notes, tutors, real-time study rooms, and smart AI tools." />
+  <meta name="theme-color" content="#0f1724" />
+
+  <!-- SEO / Social -->
+  <meta property="og:title" content="Scholarz Nation — Pass smarter. Lead brighter." />
+  <meta property="og:description" content="Scholarz Nation: curriculum-aligned notes, instant tutoring and AI study tools built for African students." />
+  <meta property="og:image" content="/og-image.png" />
+  <meta name="twitter:card" content="summary_large_image" />
+
+  <title>Scholarz Nation — AI-powered study for African students</title>
+
+  <!-- TailwindCDN (for prototype) -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            primary: '#00d4b4',
+            accent: '#FFC857',
+            deep: '#0f1724',
+            violetsoft: '#8B5CF6'
+          },
+          fontFamily: {
+            sans: ['Inter', 'ui-sans-serif', 'system-ui'],
+            mono: ['JetBrains Mono', 'monospace']
+          }
+        }
+      }
+    }
+  </script>
+
+  <!-- Structured Data (Organization) -->
+  <script type="application/ld+json">
+  {"@context":"https://schema.org","@type":"Organization","name":"Scholarz Online","url":"https://scholarznation.netlify.app/","logo":"https://scholarznation.netlify.app/logo.png","sameAs":["https://scholarzgate.blogspot.com/"]}
+  </script>
+
+  <!-- Custom SCSS (source) -->
+  <style type="text/scss">
+  // SCSS source (compile for production)
+  $deep: #0f1724;
+  $primary: #00d4b4;
+  $accent: #FFC857;
+  $violet: #8B5CF6;
+
+  .hero-blob {
+    filter: drop-shadow(0 10px 30px rgba(0,0,0,0.5));
+    transition: transform 0.5s ease;
+  }
+  .hero-blob:hover { transform: translateY(-8px) rotate(-3deg); }
+
+  .glass-card {
+    background: linear-gradient(180deg, rgba(255,255,255,0.04), rgba(255,255,255,0.02));
+    backdrop-filter: blur(8px) saturate(120%);
+    border: 1px solid rgba(255,255,255,0.06);
+  }
+
+  /* Responsive tweaks for the hero layout */
+  @media (max-width: 640px) {
+    .hero-cta { width: 100%; }
+  }
+  </style>
+
+  <!-- Inline critical CSS for performance (small) -->
+  <style>
+  :root{--bg:#0f1724}
+  html,body{height:100%;background:linear-gradient(180deg,var(--bg),#071029);font-family:Inter,Arial,Helvetica,sans-serif}
+  .sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);white-space:nowrap;border:0}
+  </style>
+
+</head>
+<body class="antialiased text-neutral-100 leading-relaxed">
+
+  <!-- Top nav + progress -->
+  <header class="sticky top-0 z-50 backdrop-blur-sm bg-black/20 border-b border-white/5">
+    <div class="max-w-7xl mx-auto px-6 py-3 flex items-center justify-between">
+      <a href="/" class="flex items-center gap-3">
+        <div class="w-10 h-10 rounded-full bg-gradient-to-br from-primary to-violetsoft flex items-center justify-center font-bold text-deep text-sm">SN</div>
+        <div class="hidden sm:block">
+          <div class="font-bold">Scholarz Nation</div>
+          <div class="text-xs text-white/60">Pass smarter • Lead brighter</div>
+        </div>
+      </a>
+
+      <nav class="hidden md:flex items-center gap-6 text-sm">
+        <a href="#features" class="hover:text-primary transition">Features</a>
+        <a href="#projects" class="hover:text-primary transition">Projects</a>
+        <a href="#academy" class="hover:text-primary transition">Academy</a>
+        <a href="#pricing" class="hover:text-primary transition">Pricing</a>
+        <a href="#contact" class="px-3 py-1 bg-primary text-deep rounded-lg font-semibold">Get Started</a>
+      </nav>
+
+      <div class="md:hidden">
+        <button id="mobileMenuBtn" aria-label="menu" class="p-2 rounded-lg glass-card">☰</button>
+      </div>
+    </div>
+  </header>
+
+  <!-- Hero -->
+  <main>
+    <section class="pt-12">
+      <div class="max-w-7xl mx-auto px-6 grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
+        <div>
+          <h1 class="text-4xl sm:text-5xl font-extrabold leading-tight">Scholarz Nation — <span class="text-primary">AI-powered</span>, community-driven study platform</h1>
+          <p class="mt-4 text-lg text-white/80 max-w-xl">Curriculum-aligned notes, verified tutors, real-time study rooms and smart AI tools — built for Southern Africa and beyond. Join thousands of learners leveling up their exam scores.</p>
+
+          <div class="mt-6 flex gap-3 flex-wrap">
+            <a href="#signup" class="hero-cta inline-flex items-center gap-3 bg-primary text-deep font-semibold px-5 py-3 rounded-2xl shadow-lg hover:scale-[1.02] transition">Create free account</a>
+            <a href="#features" class="inline-flex items-center gap-2 border border-white/10 px-4 py-3 rounded-2xl text-white/80 hover:text-primary transition">Explore features</a>
+          </div>
+
+          <div class="mt-8 grid grid-cols-2 sm:grid-cols-3 gap-3">
+            <div class="glass-card p-4 rounded-xl flex flex-col">
+              <div class="text-sm text-white/60">Past papers</div>
+              <div class="font-bold text-lg">20,000+</div>
+            </div>
+            <div class="glass-card p-4 rounded-xl flex flex-col">
+              <div class="text-sm text-white/60">Tutors</div>
+              <div class="font-bold text-lg">1,200+</div>
+            </div>
+            <div class="glass-card p-4 rounded-xl flex flex-col">
+              <div class="text-sm text-white/60">AI tools</div>
+              <div class="font-bold text-lg">Summaries • Flashcards</div>
+            </div>
+          </div>
+
+          <div class="mt-6 text-sm text-white/60">Trusted by students across Southern Africa • low-bandwidth friendly • mobile payments supported</div>
+        </div>
+
+        <!-- Visual: layered mock + micro-interactions -->
+        <div class="relative">
+          <div class="hero-blob w-full h-96 rounded-3xl overflow-hidden shadow-2xl bg-gradient-to-br from-indigo-900 to-violet-950 p-6">
+
+            <!-- Mock document viewer -->
+            <div class="grid grid-cols-2 gap-4 h-full">
+              <div class="bg-gradient-to-b from-black/10 to-black/5 rounded-lg p-3 glass-card">
+                <div class="h-3 bg-white/6 rounded w-1/3 mb-3"></div>
+                <div class="h-3 bg-white/4 rounded w-2/3 mb-2"></div>
+                <div class="h-3 bg-white/6 rounded w-1/4 mb-2"></div>
+                <div class="flex-1 mt-2 overflow-auto">
+                  <p class="text-xs text-white/60">"Learned in 2 weeks — from 45% to 78%" — A. Chirwa</p>
+                </div>
+              </div>
+
+              <div class="rounded-lg p-3 bg-gradient-to-b from-transparent to-black/10 glass-card flex flex-col justify-between">
+                <div>
+                  <div class="text-xs text-white/60">AI Summary</div>
+                  <div class="font-semibold">Key Concepts: Refraction, Snell's Law, Lenses</div>
+                </div>
+                <div class="mt-4 flex gap-2">
+                  <button class="px-3 py-2 rounded-md bg-accent text-deep font-semibold">Generate flashcards</button>
+                  <button class="px-3 py-2 rounded-md border border-white/10 text-white/80">Open notes</button>
+                </div>
+              </div>
+            </div>
+
+          </div>
+
+          <!-- small floating badges -->
+          <div class="absolute -bottom-4 left-6">
+            <div class="bg-primary text-deep px-3 py-2 rounded-full font-semibold shadow">+20 XP • Read</div>
+          </div>
+
+          <div class="absolute -top-4 right-6">
+            <div class="bg-amber-400 text-deep px-3 py-2 rounded-full font-semibold shadow">Study Streak: 7</div>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+    <!-- Features -->
+    <section id="features" class="mt-20 max-w-7xl mx-auto px-6">
+      <h2 class="text-2xl font-bold">Features built for results</h2>
+      <p class="text-white/70 mt-2 max-w-2xl">Every feature is designed to reduce friction between study and results — from AI summarizers to verified tutors and offline flashcards.</p>
+
+      <div class="mt-8 grid grid-cols-1 md:grid-cols-3 gap-6">
+        <article class="p-6 rounded-2xl glass-card">
+          <h3 class="font-bold">Curriculum-aligned Library</h3>
+          <p class="text-sm text-white/70 mt-2">Filter by board, year and topic. Upload, version and annotate documents with peers.</p>
+        </article>
+        <article class="p-6 rounded-2xl glass-card">
+          <h3 class="font-bold">AI Study Suite</h3>
+          <p class="text-sm text-white/70 mt-2">Auto-summarize, generate flashcards, create practice quizzes and step-by-step solvers — all citing sources.</p>
+        </article>
+        <article class="p-6 rounded-2xl glass-card">
+          <h3 class="font-bold">Real-time Study Rooms</h3>
+          <p class="text-sm text-white/70 mt-2">Collaborative docs, whiteboards and recordings for group study or tutor sessions.</p>
+        </article>
+      </div>
+
+      <div class="mt-8 grid grid-cols-1 md:grid-cols-3 gap-6">
+        <article class="p-6 rounded-2xl glass-card">
+          <h3 class="font-bold">Tutor Marketplace</h3>
+          <p class="text-sm text-white/70 mt-2">Verified tutors, escrowed payments and session recordings for accountability.</p>
+        </article>
+        <article class="p-6 rounded-2xl glass-card">
+          <h3 class="font-bold">Mobile-first & Offline</h3>
+          <p class="text-sm text-white/70 mt-2">PWA with offline flashcards and low-bandwidth assets. Mobile money supported.</p>
+        </article>
+        <article class="p-6 rounded-2xl glass-card">
+          <h3 class="font-bold">Institution Tools</h3>
+          <p class="text-sm text-white/70 mt-2">Teacher dashboards, class codes and bulk licensing for schools and NGOs.</p>
+        </article>
+      </div>
+    </section>
+
+    <!-- CTA / Signup form -->
+    <section id="signup" class="mt-20 py-12 bg-gradient-to-b from-black/10 to-transparent">
+      <div class="max-w-4xl mx-auto px-6 text-center glass-card p-8 rounded-3xl">
+        <h3 class="text-2xl font-bold">Get started for free</h3>
+        <p class="text-white/70 mt-2">Create a free account and grab an exam pack tailored to your board.</p>
+
+        <form id="signupForm" class="mt-6 grid grid-cols-1 sm:grid-cols-3 gap-3">
+          <input name="name" required placeholder="Your name" class="p-3 rounded-lg bg-transparent border border-white/6" />
+          <input name="email" type="email" required placeholder="Email address" class="p-3 rounded-lg bg-transparent border border-white/6" />
+          <button type="submit" class="bg-primary text-deep rounded-lg font-semibold px-4 py-3">Create account</button>
+        </form>
+
+        <p class="text-xs text-white/60 mt-3">We respect your privacy. No spam. You can unsubscribe anytime.</p>
+      </div>
+    </section>
+
+    <!-- Testimonials + Trust -->
+    <section id="trust" class="mt-16 max-w-7xl mx-auto px-6">
+      <h2 class="text-2xl font-bold">Stories from students</h2>
+      <div class="mt-6 grid grid-cols-1 md:grid-cols-3 gap-6">
+        <div class="p-4 rounded-2xl glass-card">
+          <p class="text-white/80">"The AI summaries saved me two weeks of revision — I passed with flying colours."</p>
+          <div class="mt-3 text-sm text-white/60">— Tshepo, Matabeleland</div>
+        </div>
+        <div class="p-4 rounded-2xl glass-card">
+          <p class="text-white/80">"Tutors were quick, professional and affordable. Booked a revision session the week before exams."</p>
+          <div class="mt-3 text-sm text-white/60">— Naledi, Gauteng</div>
+        </div>
+        <div class="p-4 rounded-2xl glass-card">
+          <p class="text-white/80">"Offline flashcards meant I studied on the bus. Lifesaver."</p>
+          <div class="mt-3 text-sm text-white/60">— Aisha, Lusaka</div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="mt-20 border-t border-white/5 pt-8 pb-12">
+      <div class="max-w-7xl mx-auto px-6 grid grid-cols-1 md:grid-cols-3 gap-6">
+        <div>
+          <div class="font-bold text-lg">Scholarz Online</div>
+          <div class="text-sm text-white/60 mt-2">Scholarz Nation • Scholarz Gate • Scholarz Academy</div>
+        </div>
+
+        <div>
+          <div class="font-semibold">Resources</div>
+          <ul class="mt-2 text-sm text-white/70">
+            <li><a href="#" class="hover:text-primary">Past Papers</a></li>
+            <li><a href="#" class="hover:text-primary">AI Tools</a></li>
+            <li><a href="#" class="hover:text-primary">Tutor Marketplace</a></li>
+          </ul>
+        </div>
+
+        <div>
+          <div class="font-semibold">Contact</div>
+          <div class="text-sm text-white/70 mt-2">hello@scholarzonline.org</div>
+          <div class="text-sm text-white/70 mt-1">&copy; Scholarz Online <span id="year"></span></div>
+        </div>
+      </div>
+    </footer>
+  </main>
+
+  <!-- Small scripts: interactivity + analytics-friendly hooks -->
+  <script>
+  // set year
+  document.getElementById('year').innerText = new Date().getFullYear();
+
+  // mobile menu
+  const mobileBtn = document.getElementById('mobileMenuBtn');
+  mobileBtn && mobileBtn.addEventListener('click', ()=> alert('Mobile menu — implement as needed'));
+
+  // signup form (stub)
+  const form = document.getElementById('signupForm');
+  form && form.addEventListener('submit', (e)=>{
+    e.preventDefault();
+    const data = new FormData(form);
+    // Basic validation
+    const name = data.get('name');
+    const email = data.get('email');
+    // TODO: send to API endpoint
+    alert('Thanks '+name+" — we'll email " + email + ' (demo)');
+  });
+
+  // small A11y: focus outlines for keyboard
+  document.addEventListener('keyup', function(e){
+    if(e.key === 'Tab') document.documentElement.classList.add('show-focus');
+  });
+  </script>
+
+</body>
 </html>
